# sbuild

./: .gitignore  AUTHORS  Buildd.pm  ChangeLog  ChangeLog-buildd  HACKING  Makefile  Makefile.am  NEWS  NEWS-buildd  README  README.buildd-admin  README.chroot-building  README.failcat  README.mail  README.overview  README.rbuilder  Sbuild.pm  TODO  WannaBuild.pm  abort-current-build  avg-pkg-build-time  avg-pkg-build-time.1  avg-pkg-build-time.1.in  bootstrap  buildd  buildd-abort  buildd-clean-upload  buildd-mail  buildd-mail-wrapper.1  buildd-mail-wrapper.c  buildd-make-chroot  buildd-reply.el  buildd-update-chroots  buildd-uploader  buildd-uploader.1  buildd-vlog  buildd-watcher  buildd.1  buildd.conf  (+36 more)
Sbuild/: .gitignore  Chroot.pm  Conf.pm  Log.pm  Log.pm.in  Utility.pm
chroot/: README-buildd.chroot  README-buildd.chroot.pre-sarge  add_sbuild_user  buildd.chroot  buildd.chroot.pre-sarge
configs/: Makefile.am  README  ref-oldstable  ref-stable  ref-testing  ref-unstable
db/: .gitignore  Makefile-pgxs  Makefile.am  archive-data.sql  archive.sql  build-data.sql  build.sql  db.sql  db.sql.in  debversion.cc  debversion.sql.in  functions.sql  install.sql  language.sql  schema.sql  uninstall_debversion.sql  version-c.sql  version-untrusted.sql  version.sql
debian/: .cvsignore  .gitignore  NEWS  NEWS.Debian  README.Debian  buildd.cron.d  buildd.default  buildd.forward  buildd.init  buildd.install  buildd.postinst  buildd.postinst-buildd  buildd.postrm  buildd.preinst  changelog  changelog-buildd  conffiles  control  copyright  copyright-buildd  cvslogs.old  dirs  git-tag-debian  libsbuild-perl.install  manpages  postinst  postrm  preinst  rules  rules-buildd  sbuild.NEWS  sbuild.dirs  sbuild.install  sbuild.lintian-overrides  sbuild.postinst  sbuild.postrm  sbuild.preinst  wanna-build.install
etc/: 25nssdatabases  50sbuild  99builddsourceslist  Makefile.am  buildd.conf  buildd.conf.global  copyfiles-defaults  example.sbuildrc  mount-defaults.buildd  nssdatabases-defaults  sbuild-debuild.conf  sbuild.conf  script-defaults.buildd  wanna-build.conf
etc/apt-keys/: backports.org.asc  debian-edu.asc  sbuild-key.pub  sbuild-key.sec
etc/profile-templates/buildd/all/: config
lib/: Buildd.pm  Makefile.am  Sbuild.pm
lib/Buildd/: Base.pm  Client.pm  ClientConf.pm  Conf.pm  Daemon.pm  DistConf.pm  Mail.pm  Makefile.am  UploadQueueConf.pm  Uploader.pm  Watcher.pm
lib/Sbuild/: .gitignore  AptResolver.pm  AptitudeBuildDepSatisfier.pm  AptitudeResolver.pm  Base.pm  Build.pm  BuildDepSatisfierBase.pm  Chroot.pm  ChrootInfo.pm  ChrootInfoSchroot.pm  ChrootInfoSudo.pm  ChrootPlain.pm  ChrootRoot.pm  ChrootSchroot.pm  ChrootSetup.pm  ChrootSudo.pm  Conf.pm  ConfBase.pm  DB.pm  Exception.pm  InternalBuildDepSatisfier.pm  InternalResolver.pm  Log.pm  Log.pm.in  LogBase.pm  Makefile.am  Options.pm  OptionsBase.pm  Resolver.pm  ResolverBase.pm  Sysconfig.pm.in  Utility.pm  XaptResolver.pm
lib/Sbuild/DB/: Base.pm  Client.pm  ClientConf.pm  Info.pm  MLDBM.pm  Makefile.am  Postgres.pm
lib/WannaBuild/: Conf.pm  Database.pm  Mail.pm  Makefile.am  Options.pm
man/: .gitignore  Makefile.am  avg-pkg-build-time.1.in  buildd-mail-wrapper.1  buildd-mail.1.in  buildd-uploader.1.in  buildd-vlog.1.in  buildd-watcher.1.in  buildd.1  buildd.1.in  buildd.conf.5.in  defs.man.in  sbuild-abort.1.in  sbuild-adduser.8.in  sbuild-apt.1.in  sbuild-checkpackages.1.in  sbuild-clean.1.in  sbuild-createchroot.1.in  sbuild-createchroot.8.in  sbuild-debuild.1.in  sbuild-hold.1.in  sbuild-setup.7.in  sbuild-setup.7.in.rej  sbuild-shell.1.in  sbuild-stats.1.in  sbuild-update.1.in  sbuild-upgrade.1.in  sbuild.1.in  sbuild.conf.5.in  wanna-build-catdb.1.in  wanna-build-mail.1.in  wanna-build-merge-packages.1.in  wanna-build-statistics.1.in  wanna-build.1.in
scripts/: .gitignore  global.mk  sbuild_release.m4.in
src/: .gitignore  Makefile.am  buildd-mail-wrapper.c  wanna-build-mail.c
test/: .gitignore  Makefile.am  logging  perl-syntax.in  sbuild-checkpackages.in  sbuild-clean.in  sbuild-distupgrade.in  sbuild-hold.in  sbuild-stats.in  sbuild-update.in  sbuild-upgrade.in  sbuild.in  wanna-build
tools/: Makefile.am  sbuild-dumpconfig
wrapper/: .gitignore  Makefile.am  util.cc  util.h  wrapper.cc
